--- a/style.css
+++ b/style.css
@@ -57,14 +57,125 @@ body {
     background-color: var(--olive-green);
     color: var(--cream);
     font-family: 'HeroLight', sans-serif;
+    margin: 0;
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-.nav-header, h1 {
+header {
+    position:fixed;
+    width:100%;
+    height:50px;
+    text-align:center;
+    vertical-align:middle;
+    line-height:50px;
+    top:0px;
+}
+
+.nav-logo {
+    width: 60px;
+    height: 60px;
+}
+
+.nav-heading {
+    font-size: 1.5rem;
+}
+
+.nav-heading, #welcome-hero-left h1 {
     font-family: 'Reborn', sans-serif;
+}
+
+.header-logo {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    margin-left: 10px;
+}
+
+#welcome-hero {
+    display: flex;
+    gap: 100px;
+    width: 70%;
+    height: 100vh;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+#welcome-hero-left {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+#welcome-hero-left > div {
+    display: flex;
+    align-items: center;
+    gap: 2em;
+}
+
+#welcome-hero-left img {
+    width: 150px;
+    height: 150px;
+}
+
+#welcome-hero-left h1 {
+    font-size: 2rem;
+    letter-spacing: 3px;
+    width: min-content;
+    margin: 0;
+}
+
+#welcome-hero-left p {
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 0.8em;
+    letter-spacing: 3px;
+    width: 80%;
+}
+
+#welcome-hero-right {
+    background-color: var(--cream);
+    width: fit-content;
+    height: fit-content;
+    padding: 1.5em;
+    color: black;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 1.5em;
 }
 
 .portfolio-link {
     font-family: Georgia, 'Times New Roman', Times, serif;
-    color: var(--cream);
+    color: black;
     text-decoration: none;
+    text-align: center;
+    width: 350px;
+    padding: 1em 0;
+    border: 1px solid black;
+}
+
+@media all and (max-width: 768px) {
+    #welcome-hero {
+        flex-direction: column;
+        justify-content: center;
+        gap: 50px;
+    }
+
+    #welcome-hero-left,
+    #welcome-hero-right {
+        width: 100%;
+    }
+
+    #welcome-hero-right {
+        padding: 1em;
+    }
+
+    .portfolio-link {
+        width: 100%;
+    }    
 }
