--- a/style.css
+++ b/style.css
@@ -1,181 +1,203 @@
 /* Webfonts */
 @font-face {
-    font-family: 'Reborn';
-    src: url('./assets/fonts/reborn/Reborn.eot'); 
-    src: url('./assets/fonts/reborn/Reborn.eot?#iefix') format('embedded-opentype'), 
-         url('./assets/fonts/reborn/Reborn.woff') format('woff'), 
-         url('./assets/fonts/reborn/Reborn.ttf') format('truetype'); 
-    font-style: normal;
-    font-weight: normal;
-    text-rendering: optimizeLegibility;
+  font-family: "Reborn";
+  src: url("./assets/fonts/reborn/Reborn.eot");
+  src: url("./assets/fonts/reborn/Reborn.eot?#iefix")
+      format("embedded-opentype"),
+    url("./assets/fonts/reborn/Reborn.woff") format("woff"),
+    url("./assets/fonts/reborn/Reborn.ttf") format("truetype");
+  font-style: normal;
+  font-weight: normal;
+  text-rendering: optimizeLegibility;
 }
 
 @font-face {
-    font-family: 'HeroLight';
-    src: url('./assets/fonts/hero/Hero-Light.eot');
-    src: url('./assets/fonts/hero/Hero-Light.eot?#iefix') format('embedded-opentype'),
-        url('./assets/fonts/hero/Hero-Light.woff2') format('woff2'),
-        url('./assets/fonts/hero/Hero-Light.woff') format('woff'),
-        url('./assets/fonts/hero/Hero-Light.ttf') format('truetype');
-    font-weight: normal;
-    font-style: normal;
-    font-display: swap;
+  font-family: "HeroLight";
+  src: url("./assets/fonts/hero/Hero-Light.eot");
+  src: url("./assets/fonts/hero/Hero-Light.eot?#iefix")
+      format("embedded-opentype"),
+    url("./assets/fonts/hero/Hero-Light.woff2") format("woff2"),
+    url("./assets/fonts/hero/Hero-Light.woff") format("woff"),
+    url("./assets/fonts/hero/Hero-Light.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
-    font-family: 'Hero';
-    src: url('./assets/fonts/hero/Hero-Regular.eot');
-    src: url('./assets/fonts/hero/Hero-Regular.eot?#iefix') format('embedded-opentype'),
-        url('./assets/fonts/hero/Hero-Regular.woff2') format('woff2'),
-        url('./assets/fonts/hero/Hero-Regular.woff') format('woff'),
-        url('./assets/fonts/hero/Hero-Regular.ttf') format('truetype');
-    font-weight: normal;
-    font-style: normal;
-    font-display: swap;
+  font-family: "Hero";
+  src: url("./assets/fonts/hero/Hero-Regular.eot");
+  src: url("./assets/fonts/hero/Hero-Regular.eot?#iefix")
+      format("embedded-opentype"),
+    url("./assets/fonts/hero/Hero-Regular.woff2") format("woff2"),
+    url("./assets/fonts/hero/Hero-Regular.woff") format("woff"),
+    url("./assets/fonts/hero/Hero-Regular.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
-    font-family: 'HeroBold';
-    src: url('./assets/fonts/hero/Hero-Bold.eot');
-    src: url('./assets/fonts/hero/Hero-Bold.eot?#iefix') format('embedded-opentype'),
-        url('./assets/fonts/hero/Hero-Bold.woff2') format('woff2'),
-        url('./assets/fonts/hero/Hero-Bold.woff') format('woff'),
-        url('./assets/fonts/hero/Hero-Bold.ttf') format('truetype');
-    font-weight: normal;
-    font-style: normal;
-    font-display: swap;
+  font-family: "HeroBold";
+  src: url("./assets/fonts/hero/Hero-Bold.eot");
+  src: url("./assets/fonts/hero/Hero-Bold.eot?#iefix")
+      format("embedded-opentype"),
+    url("./assets/fonts/hero/Hero-Bold.woff2") format("woff2"),
+    url("./assets/fonts/hero/Hero-Bold.woff") format("woff"),
+    url("./assets/fonts/hero/Hero-Bold.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
 }
 
 :root {
-    --cream: #F1EBE5;
-    --olive-green: #5F634F;
-    /* black */
-    --mustard: #FFBE4D;
+  --cream: #f1ebe5;
+  --olive-green: #5f634f;
+  /* black */
+  --mustard: #ffbe4d;
 }
 
 body {
-    background-color: var(--olive-green);
-    color: var(--cream);
-    font-family: 'HeroLight', sans-serif;
-    margin: 0;
-    width: 100vw;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  background-color: var(--olive-green);
+  color: var(--cream);
+  font-family: "HeroLight", sans-serif;
+  margin: 0;
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 header {
-    position:fixed;
-    width:100%;
-    height:50px;
-    text-align:center;
-    vertical-align:middle;
-    line-height:50px;
-    top:0px;
+  position: fixed;
+  width: 100%;
+  height: 50px;
+  text-align: center;
+  vertical-align: middle;
+  line-height: 50px;
+  top: 0px;
 }
 
 .nav-logo {
-    width: 60px;
-    height: 60px;
+  width: 60px;
+  height: 60px;
 }
 
 .nav-heading {
-    font-size: 1.5rem;
+  font-size: 1.5rem;
 }
 
-.nav-heading, #welcome-hero-left h1 {
-    font-family: 'Reborn', sans-serif;
+.nav-heading,
+#welcome-hero-left h1 {
+  font-family: "Reborn", sans-serif;
 }
 
 .header-logo {
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    margin-left: 10px;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  margin-left: 10px;
 }
 
 #welcome-hero {
-    display: flex;
-    gap: 100px;
-    width: 70%;
-    height: 100vh;
-    align-items: center;
-    justify-content: space-evenly;
+  display: flex;
+  gap: 100px;
+  width: 70%;
+  height: 100vh;
+  align-items: center;
+  justify-content: space-evenly;
 }
 
 #welcome-hero-left {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 #welcome-hero-left > div {
-    display: flex;
-    align-items: center;
-    gap: 2em;
+  display: flex;
+  align-items: center;
+  gap: 2em;
 }
 
 #welcome-hero-left img {
-    width: 150px;
-    height: 150px;
+  width: 150px;
+  height: 150px;
 }
 
 #welcome-hero-left h1 {
-    font-size: 2rem;
-    letter-spacing: 3px;
-    width: min-content;
-    margin: 0;
+  font-size: 2rem;
+  letter-spacing: 3px;
+  width: min-content;
+  margin: 0;
 }
 
 #welcome-hero-left p {
-    text-align: center;
-    text-transform: uppercase;
-    font-size: 0.8em;
-    letter-spacing: 3px;
-    width: 80%;
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 0.8em;
+  letter-spacing: 3px;
+  width: 80%;
 }
 
 #welcome-hero-right {
-    background-color: var(--cream);
-    width: fit-content;
-    height: fit-content;
-    padding: 1.5em;
-    color: black;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 1.5em;
+  background-color: var(--cream);
+  width: fit-content;
+  height: fit-content;
+  padding: 1.5em;
+  color: black;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 1.5em;
 }
 
 .portfolio-link {
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    color: black;
-    text-decoration: none;
-    text-align: center;
-    width: 350px;
-    padding: 1em 0;
-    border: 1px solid black;
+  font-family: Georgia, "Times New Roman", Times, serif;
+  color: black;
+  text-decoration: none;
+  text-align: center;
+  width: 350px;
+  padding: 1em 0;
+  border: 1px solid black;
 }
 
-@media all and (max-width: 768px) {
+/* Media Query for screens smaller than 768px (typical mobile and tablet devices) */
+@media (max-width: 1024px) {
     #welcome-hero {
-        flex-direction: column;
-        justify-content: center;
-        gap: 50px;
+      flex-direction: column;
+      gap: 20px;
+      justify-content: center;
+      align-items: center;
     }
-
-    #welcome-hero-left,
+  
+    header {
+      height: 40px;
+      line-height: 40px;
+    }
+  
+    .nav-logo {
+      width: 40px;
+      height: 40px;
+    }
+  
+    .nav-heading {
+      font-size: 1.2rem;
+    }
+  
+    #welcome-hero-left h1 {
+      font-size: 1.5rem; /* Adjust font size for smaller screens */
+    }
+  
     #welcome-hero-right {
-        width: 100%;
+      width: 100%; /* Ensure it fits the mobile screen */
+      padding: 1em; /* Adjust padding */
     }
-
-    #welcome-hero-right {
-        padding: 1em;
-    }
-
+  
     .portfolio-link {
-        width: 100%;
-    }    
-}
+      width: 100%; /* Make link full width */
+    }
+  }
+  
