--- a/style.css
+++ b/style.css
@@ -2,80 +2,60 @@
 @font-face {
   font-family: "Reborn";
   src: url("./assets/fonts/reborn/Reborn.eot");
-  src: url("./assets/fonts/reborn/Reborn.eot?#iefix")
-      format("embedded-opentype"),
+  src: url("./assets/fonts/reborn/Reborn.eot?#iefix") format("embedded-opentype"),
     url("./assets/fonts/reborn/Reborn.woff") format("woff"),
     url("./assets/fonts/reborn/Reborn.ttf") format("truetype");
   font-style: normal;
   font-weight: normal;
-  text-rendering: optimizeLegibility;
 }
 
 @font-face {
   font-family: "HeroLight";
   src: url("./assets/fonts/hero/Hero-Light.eot");
-  src: url("./assets/fonts/hero/Hero-Light.eot?#iefix")
-      format("embedded-opentype"),
+  src: url("./assets/fonts/hero/Hero-Light.eot?#iefix") format("embedded-opentype"),
     url("./assets/fonts/hero/Hero-Light.woff2") format("woff2"),
     url("./assets/fonts/hero/Hero-Light.woff") format("woff"),
     url("./assets/fonts/hero/Hero-Light.ttf") format("truetype");
   font-weight: normal;
-  font-style: normal;
-  font-display: swap;
 }
 
-@font-face {
-  font-family: "Hero";
-  src: url("./assets/fonts/hero/Hero-Regular.eot");
-  src: url("./assets/fonts/hero/Hero-Regular.eot?#iefix")
-      format("embedded-opentype"),
-    url("./assets/fonts/hero/Hero-Regular.woff2") format("woff2"),
-    url("./assets/fonts/hero/Hero-Regular.woff") format("woff"),
-    url("./assets/fonts/hero/Hero-Regular.ttf") format("truetype");
-  font-weight: normal;
-  font-style: normal;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: "HeroBold";
-  src: url("./assets/fonts/hero/Hero-Bold.eot");
-  src: url("./assets/fonts/hero/Hero-Bold.eot?#iefix")
-      format("embedded-opentype"),
-    url("./assets/fonts/hero/Hero-Bold.woff2") format("woff2"),
-    url("./assets/fonts/hero/Hero-Bold.woff") format("woff"),
-    url("./assets/fonts/hero/Hero-Bold.ttf") format("truetype");
-  font-weight: normal;
-  font-style: normal;
-  font-display: swap;
-}
-
+/* Root colors */
 :root {
   --cream: #f1ebe5;
   --olive-green: #5f634f;
-  /* black */
-  --mustard: #ffbe4d;
+  --dark-olive: #2B2E1D;
+  --honey-orange: #D18436;
 }
 
+/* General body styling */
 body {
   background-color: var(--olive-green);
   color: var(--cream);
   font-family: "HeroLight", sans-serif;
   margin: 0;
-  width: 100vw;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
+/* Header styling */
 header {
   position: fixed;
   width: 100%;
-  height: 50px;
-  text-align: center;
-  vertical-align: middle;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  top: 0;
   line-height: 50px;
-  top: 0px;
+  
+  padding-top: 1em;
+}
+
+.header-logo {
+  display: flex;
+  align-items: center;
+  gap: 1em;
+  margin-left: 1em;
 }
 
 .nav-logo {
@@ -83,22 +63,68 @@ header {
   height: 60px;
 }
 
-.nav-heading {
+.nav-heading,
+.nav-heading:active,
+.nav-heading:visited {
   font-size: 1.5rem;
+  text-decoration: none;
+  color: var(--cream);
 }
 
-.nav-heading,
-#welcome-hero-left h1 {
+.nav-heading {
   font-family: "Reborn", sans-serif;
 }
 
-.header-logo {
+.nav-container {
   display: flex;
+  justify-content: space-between;
   align-items: center;
-  gap: 10px;
-  margin-left: 10px;
 }
 
+.nav-links {
+  display: flex;
+  gap: 1em;
+  margin-right: 1em;
+  list-style: none;
+}
+
+.nav-links a,
+.nav-links a:active,
+.nav-links a:visited {
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-size: 1em;
+  color: var(--cream);
+  text-decoration: none;
+}
+
+.nav-links a:hover {
+  color: var(--honey-orange);
+  transition: 0.5s ease;
+}
+
+.menu-icon {
+  display: none;
+  cursor: pointer;
+}
+
+/* Footer styling */
+footer {
+  width: 100%;
+  height: 50px;
+  text-align: center;
+  line-height: 50px;
+  bottom: 0;
+  position: fixed;
+
+
+  padding-bottom: 1em;
+}
+
+.footer-credit {
+  text-transform: uppercase;
+}
+
+/* Welcome Hero Section for index.html */
 #welcome-hero {
   display: flex;
   gap: 100px;
@@ -128,6 +154,7 @@ header {
 
 #welcome-hero-left h1 {
   font-size: 2rem;
+  font-family: 'Reborn', sans-serif;
   letter-spacing: 3px;
   width: min-content;
   margin: 0;
@@ -164,40 +191,66 @@ header {
   border: 1px solid black;
 }
 
-/* Media Query for screens smaller than 768px (typical mobile and tablet devices) */
+.portfolio-link:hover {
+  background-color: var(--honey-orange);
+  color: var(--dark-olive);
+  transition: 0.5s ease;
+}
+
+.social-links {
+  display: flex;
+  gap: 0.5em;
+}
+
+.social-link {
+  width: 30px;
+  height: 30px;
+}
+
 @media (max-width: 1024px) {
-    #welcome-hero {
-      flex-direction: column;
-      gap: 20px;
-      justify-content: center;
-      align-items: center;
-    }
-  
-    header {
-      height: 40px;
-      line-height: 40px;
-    }
-  
-    .nav-logo {
-      width: 40px;
-      height: 40px;
-    }
-  
-    .nav-heading {
-      font-size: 1.2rem;
-    }
-  
-    #welcome-hero-left h1 {
-      font-size: 1.5rem; /* Adjust font size for smaller screens */
-    }
-  
-    #welcome-hero-right {
-      width: 100%; /* Ensure it fits the mobile screen */
-      padding: 1em; /* Adjust padding */
-    }
-  
-    .portfolio-link {
-      width: 100%; /* Make link full width */
-    }
+  #welcome-hero {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
   }
-  
+
+  #welcome-hero-right {
+    width: 100%;
+    padding: 1em;
+  }
+
+  .portfolio-link {
+    width: 100%;
+  }
+}
+
+/* Mobile responsiveness */
+@media (max-width: 768px) {
+  .nav-links {
+    display: none;
+    flex-direction: column;
+    background-color: var(--olive-green);
+    position: absolute;
+    top: 50px;
+    right: 0;
+    width: 100%;
+    text-align: center;
+    padding: 1em 0;
+  }
+
+  .nav-links a {
+    padding: 1em;
+  }
+
+  .menu-icon {
+    display: block;
+  }
+}
+
+/* Desktop responsiveness */
+@media (min-width: 769px) {
+  .nav-links {
+    display: flex;
+  }
+}
